--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <script>
         // 設定
         const LIFF_ID = '2007941209-AE20r8rK';
-        const SERVER_URL = 'NEW_DEPLOYMENT_URL_HERE'; // 新しいWeb App URLに置き換える
+        const SERVER_URL = 'https://script.google.com/macros/s/AKfycbwMzR_f19FnST_AuHxZBZksaXZG_JeKmIi7t_VHeM5tRJp1ph3dOBYkOAdnXp5bZGS2rg/exec'; // 新しいWeb App URLに置き換える
 
         let currentToken = null;
         let userProfile = null;
